# graphite

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: action.yaml  testing.yaml
docs/: Doxyfile  Doxyfile.in  conf.py  footer.html  graphite.rst  header.html  index.rst  requirements.txt
docs/markdown/: algorithms.md  main.md  memory.md  solvers.md
examples/: bal.cu  bal.cuh  circle.cu  hello.cu  layout.cu  optimize.cu  projection_jacobians.cuh  reprojection_error.cuh  reprojection_error.py
include/glso/: active.hpp  common.hpp  core.hpp  differentiation.hpp  dual.hpp  factor.hpp  graph.hpp  kernel.hpp  loss.hpp  op.hpp  optimizer.hpp  preconditioner.hpp  solver.hpp  stream.hpp  types.hpp  utils.hpp  vector.hpp  vertex.hpp  visitor.hpp
include/graphite/: active.hpp  block.hpp  common.hpp  core.hpp  csc_utils.hpp  cudss_solver.hpp  differentiation.hpp  dual.hpp  eigen_solver.hpp  eigen_solver_interface.hpp  factor.hpp  graph.hpp  hessian.hpp  kernel.hpp  linear_solver.hpp  loss.hpp  op.hpp  optimizer.hpp  pcg.hpp  preconditioner.hpp  schur.hpp  solver.hpp  stream.hpp  types.hpp  utils.hpp  vector.hpp  vertex.hpp  visitor.hpp
include/graphite/ops/: active.hpp  chi2.hpp  common.hpp  error.hpp  hessian.hpp  linearize.hpp  product.hpp  schur.hpp  state.hpp  update.hpp  vector.hpp
include/graphite/optimizer/: adam.hpp  gradient_descent.hpp  levenberg_marquardt.hpp
include/graphite/preconditioner/: block_jacobi.hpp  block_jacobi_schur.hpp  identity.hpp  preconditioner.hpp  schur_preconditioner.hpp
include/graphite/solver/: cudss.hpp  cudss_schur.hpp  eigen.hpp  eigen_schur.hpp  eigen_solver_interface.hpp  pcg.hpp  pcg_schur.hpp  solver.hpp
notes/: design.md
src/: active.cu  eigen_solver.cpp  stream.cpp
tests/: common_types.hpp  dual.cu  factor.cu  schur.cu  schur_cpu_ref.cpp  schur_cpu_ref.hpp  tests.cu  vector.cu  vertex.cu
